--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Discover hidden places in the world around you</h1>
-        <div class="download">
-            <a href="#">Download Excursion (Coming Soon)</a>
-        </div>
+    <h1 class="header--main">Discover hidden places in the world around you</h1>
+    <p class="download">
+        <a href="#">Download Excursion (Coming Soon)</a>
+    </P>
     </header>
 </body>
 </html>
