--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
-    <p class="download">
-        <a href="#">Download Excursion (Coming Soon)</a>
-    </P>
-    </header>
+    <p><a href="#" class="link--cta ">Download Excursion (Coming Soon)</a></p>
 </body>
 </html>
