--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 
+    <p><img src="resources/images/camp.webp" alt=""></p>
+    <p><img src="resources/images/phone.webp" alt=""></p>
+
+    <h4 class="header--sub-header">Coming Soon for iPhone and Android</h4>
+    <p><a href="#" class="link--cta ">Download Excursion (Coming Soon)</a></p>
+
+    <p>&copy; Excursion</p>
+
 </body>
 </html>
