--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <p><img src="resources/images/camp.webp" alt=""></p>
     <p><img src="resources/images/phone.webp" alt=""></p>
 
-    <h4 class="header--sub-header">Coming Soon for iPhone and Android</h4>
+    <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
     <p><a href="#" class="link--cta ">Download Excursion (Coming Soon)</a></p>
 
-    <p>&copy; Excursion</p>
+    <p class="footer--copyright"><a href="#">&copy;Excursion</a></p>
 
 </body>
 </html>
